--- a/src/pages/work/[slug].astro
+++ b/src/pages/work/[slug].astro
@@ -44,6 +44,7 @@ const reflections = [
       timeframe={data.timeframe}
       team={data.team}
       stack={data.stack}
+      layout="snapshot"
     />
   </section>
 
